@@ -2,16 +2,16 @@
 
 1). Open External Tools Configuration*
 *Name*: soars-sbt-launch
-*Location*: C:\jdk1.8.0_171\bin\java.exe
+*Location*: C:\jdk-12.0.1\bin\java.exe
 *Working Directory*: ${workspace_loc:/FlyTrainerApp/server}
 
 -Dfile.encoding=UTF8 
 -Djline.terminal=none 
 -Dsbt.log.noformat=true 
--Dsbt.global.base=${env_var:TEMP}\sbt-global-pluginstub -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9999 -Xms512M -Xmx1024M -Xss1M -XX:+CMSClassUnloadingEnabled 
--DappTop=.
+-Dsbt.global.base=${env_var:TEMP}\sbt-global-pluginstub --add-opens java.base/java.lang=ALL-UNNAMED -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9999 -Xms512M -Xmx1024M -Xss1M -XX:+CMSClassUnloadingEnabled 
+-DappTop=. 
 -Ddb.flytrainer.username=flytrainer
--Ddb.flytrainer.password=**********
+-Ddb.flytrainer.password=f1ytr@n3r
 -Dplay.temporaryFile.dir=./server/target -jar "${env_var:SBT_HOME}bin\sbt-launch.jar" run
 
 2) Open Debug Configuration:*
